# synfig

./: .gitignore  .gitmodules  README.md
ETL/ETL/: _surface.h
ETL/test/: .gitignore
autobuild/: synfigstudio-linux-build.sh
synfig-core/src/modules/lyr_std/: Makefile.am  curvewarp.cpp  main.cpp  stroboscope.h  timeloop.cpp  timeloop.h  timewarp.cpp  timewarp.h
synfig-core/src/modules/mod_filter/: Makefile.am  channelmixer.cpp  channelmixer.h  main.cpp
synfig-core/src/modules/mod_geometry/: advanced_outline.cpp  outline.cpp
synfig-core/src/modules/mod_gradient/: curvegradient.cpp
synfig-core/src/modules/mod_noise/: Makefile.am  fractal.cpp  fractal.h  main.cpp  perlin.cpp  perlin.h
synfig-core/src/modules/mod_particle/: plant.cpp
synfig-core/src/synfig/: Makefile.am  blinepoint.h  canvas.cpp  context.cpp  distance.cpp  layer.cpp  layer.h  loadcanvas.cpp  math.h  paramdesc.cpp  range.h  real.h  releases.h  savecanvas.cpp  valuenode.cpp  vector.h  widthpoint.cpp
synfig-core/src/synfig/color/: cairocolor.cpp  cairocolorblendingfunctions.h  color.cpp  color.h  colorblendingfunctions.h  pixelformat.h
synfig-core/src/synfig/layers/: Makefile_insert  (+2 more)
synfig-core/test/: .gitignore  Makefile.am  bone.cpp  math.cpp  real.cpp  vector.cpp
synfig-studio/: README
synfig-studio/src/gui/: app.cpp  canvasview.cpp  compview.cpp  duck.h  duckmatic.cpp  duckmatic.h  instance.cpp  workarea.cpp
synfig-studio/src/synfigapp/: Makefile.am  action.cpp  action.h  action_system.h  canvasinterface.cpp  canvasinterface.h  instance.cpp  instance.h  main.h  uimanager.h
(+34 files in other folders)
